# aoc_rust_2025

./: .gitignore  Cargo.toml  README.md
src/: day_factory.rs  main.rs  utils.rs
src/day1/: part1.rs
src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/input/: input_day10.txt
src/utils/: day.rs  day_error.rs  fetch_input.rs
