[package]
name = "aoc_rust_2025"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread"] }
